--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,9 @@
 
 \title{Learning Contract Invariants using IC3}
 
+% Verifying smart contracts with direct CHC encoding
+
+
 %\author{Matteo Marescotti\inst{1}\and Leonardo Alt\inst{2}\and Rodrigo Otoni\inst{1}}
 %\institute{USI\and Ethereum Foundation}
 %
@@ -47,8 +50,8 @@
   numbers=left,
   mathescape,
   numberstyle=\tiny,
-  basicstyle=\ttfamily,
-  xleftmargin=.5in
+  basicstyle=\footnotesize\ttfamily,
+  xleftmargin=.2in
 }
 
 \input{macros}
